# fitCheckIn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
forms/: admindialog.ui  adminmainwindow.ui  loginwidget.ui  signupwidget.ui  usermainwindow.ui
include/: admindialog.h  adminmainwindow.h  database.h  loginwidget.h  signupwidget.h  usermainwindow.h
src/: admindialog.cpp  adminmainwindow.cpp  database.cpp  loginwidget.cpp  signupwidget.cpp  usermainwindow.cpp
